# Armory

./: README.md  block_chain.py  client.py  usage.sh  web_server.py
.github/workflows/: stale.yml
rc-conf/: zshrc
rc-conf/kali/root/: bashrc  vimrc  zshrc
rc-conf/os/kali/root/: tmux.conf  zshrc
rc-conf/os/kali/user/: bashrc  zshrc
rc-conf/os/ubuntu/: bashrc
rc-conf/user/: zshrc
snippets/: README.md
snippets/smartlog/: README.md  smartlog.py
terminal/: .zprofile  .zshrc  README.md  install.sh
toolkit/: threader.py
vscode/: DOT_bumpversion.cfg  DOT_env  Example-Project.code-workspace  README.md  mkdocs.yml  pyproject.toml
vscode/DOT_vscode/: launch.json
vscode/demo/: __init__.py  __main__.py
vscode/docs/: example-mermaid-flowchart.md  index.md
vscode/private/: poetry-setup.sh
vscode/tests/: test_demo.py
workspace/: .bumpversion.cfg  README.md  pyproject.toml
workspace/demo/: __init__.py
workspace/demo/utils/: controller.py
workspace/tests/: test_demo.py
zshell/: profile  zprofile  zshrc
