[tool.poetry]

name = "demo"

version = "0.1.0"

description = "An example project demonstrating my preferred setup for a Python project."

license = ""

authors = ["John Doe <johndoe@example.com>"]

maintainers = [
    "George Washington <georgewashington@example.com>",
    "Jane Doe <janedoe@example.com>",
]

readme = "README.md"

homepage = "https://github.com/sandmanscanga/Misc/blob/master/README.md"

repository = "https://github.com/sandmanscanga/Misc"

keywords = ["app", "example", "project", "python"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Topic :: Software Development",
    "Typing :: Typed",
]

packages = [{ include = "demo", from = "." }]

include = ["tests/", "pyproject.toml", "README.md"]

exclude = [
    "**/__pycache__/",
    "**/*.pyc",
    "build/",
    "dist/",
    "venv/",
    ".env"
]

[tool.poetry.scripts]
run_unit_tests = "demo.scripts.run_unit_tests:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
blacken-docs = "*"
bumpversion = "*"
colorama = "*"
colorlog = "*"
ipdb = "*"
ipython = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
python-dotenv = "*"
rich = "*"
psutil = "*"
notebook = "*"
gitpython = "*"

[tool.poetry.group.testing.dependencies]
coverage = "*"
pygments-pytest = "*"
pytest = "*"
pytest-benchmark = "*"
pytest-cov = "*"
pytest-emoji = "*"
pytest-logdog = "*"
pytest-menu = "*"
pytest-mock = "*"
pytest-pretty = "*"
pytest-sorter = "*"
pytest-threadleak = "*"

[tool.poetry.group.documentation.dependencies]
click-man = "*"
doc-utils = "*"
meta-sphinx = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
pdoc3 = "*"
pydocstyle = "*"
sphinx = "*"
sphinx-autodoc-annotation = "*"
sphinx-autodoc-typehints = "*"
sphinx-multi-theme = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
